--- a/jardin_FRONTEND/src/index.css
+++ b/jardin_FRONTEND/src/index.css
@@ -1,7 +1,5 @@
 #login {
-    background-color: #f5f5f5;
-    height: 100vh;
-    width: 100vw;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
