carrusel eventos + cards en galeria

--- a/jardin_FRONTEND/src/components/eventos/Carrusel.css
+++ b/jardin_FRONTEND/src/components/eventos/Carrusel.css
@@ -4,9 +4,33 @@
 }
 
 .carousel .carousel-indicators button {
-    background-color: gray;
+  background-color: gray;
+  transform: TranslateY(+90%);
 }
 
 .carousel .carousel-indicators button.active {
-    background-color: black;
+  background-color: black;
+  transform: TranslateY(+90%);
+}
+
+.carousel {
+  position: relative;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute;
+  top: 50%;
+}
+
+.carousel-control-prev {
+  right: auto;
+  left: 20px;
+  transform: TranslateX(-95%);
+}
+
+.carousel-control-next {
+  left: auto;
+  right: 20px;
+  transform: TranslateX(+95%);
 }
